2007-10-22  Dalibor Topic  <robilad@kaffe.org>

	* libraries/clib/native/ClassLoader.c 
	(java_lang_VMClassLoader_getPrimitiveClass0):
	Rewritten to use getPrimitiveClassFromSignature.

2007-10-22  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/classMethod.h (getPrimitiveClassFromSignature):
	Added prototype.

	* kaffe/kaffevm/itypes.c (getPrimitiveClassFromSignature):
	New function.
	(classFromSig) Delegate to getPrimitiveClassFromSignature
	for primitive types.

2007-10-22  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/itypes.c (classFromSig): Don't post
	VerifyError here, throw it in the calling function.
	(getClassFromSignaturePart) Post VerifyError if call 
	to classFromSig fails.

2007-10-21  Dalibor Topic  <robilad@kaffe.org>

	* libraries/clib/native/TimeZone.c: Removed, use the version in GNU Classpath
	instead.

	* kaffe/kaffevm/Makefile.am (libkaffevm_la_SOURCES): Removed TimeZone.c.

2007-10-21  Dalibor Topic  <robilad@kaffe.org>

	* TODO: Removed VMProcess top, as VMProcess is now used straight from
	GNU Classpath.

2007-10-10  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac: Removed --with-staticbin option.

	* FAQ/FAQ.debugging, developers/FullTest.sh: Removed --with-staticbin.

2007-10-08  Dalibor Topic  <robilad@kaffe.org>

	* config/hpux/linux/md.c: Added empty file to fix build on 
	hppa-hpux.

	* config/Makefile.am (EXTRA_DIST): Added parisc/hpux/md.c.

2007-10-08  Dalibor Topic  <robilad@kaffe.org>

	* config/parisc/linux/md.c: Added empty file to fix build on 
	hppa-linux.

	* config/Makefile.am (EXTRA_DIST): Added parisc/linux/md.c.

	Reported by:  Michael Koch  <mkoch@kaffe.org>

2007-10-06  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/systems/unix-pthreads/signal.c (KaffePThread_detectStackBoundaries): 
	Removed unused else branch that caused the build to fail on hppa-linux.

	Reported by:  Michael Koch  <mkoch@kaffe.org>
	
2007-10-01  Dalibor Topic  <robilad@kaffe.org>
